@@ -9,6 +9,7 @@ inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 lib/HTTP/Server/Simple.pm
 lib/HTTP/Server/Simple/CGI.pm
+lib/HTTP/Server/Simple/CGI/Environment.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
