@@ -14,8 +14,8 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 de608e218003f26fbd0fee7d79ad8b78fe2715f3 Changes
-SHA1 74092110d280de0961a26025021bb987d345dabc MANIFEST
+SHA1 33766e77267ce32581d8a04c0fd168d511c38aa8 Changes
+SHA1 0ac508c50476dcc2bf8fe3094cb341425291e1ee MANIFEST
 SHA1 0aa0b675ec98b4fcc9eb3d8ca3533a17ca72ff57 META.yml
 SHA1 490f3fd115e09cb05b725580e5ed5cdd58241049 Makefile.PL
 SHA1 ed0c107672daac3bc9e266876666e1059dbe44b7 README
@@ -28,8 +28,9 @@ SHA1 e094fe96aef06c68d7a424818c12e52b11f1ccdd inc/Module/Install/Makefile.pm
 SHA1 e448c6dc5351ef425e3f8bdbeb642409120bc3ca inc/Module/Install/Metadata.pm
 SHA1 134de6ff2f762873b6a1af950dd53f8e0a801d73 inc/Module/Install/Win32.pm
 SHA1 1ec06df292af7f652d33db6129e9e4c7cc8b5095 inc/Module/Install/WriteAll.pm
-SHA1 bac22d5a4df86809a430790b5745c22398ad15aa lib/HTTP/Server/Simple.pm
-SHA1 f8717b83bec75c3b7dc7904b14823bf605b77f99 lib/HTTP/Server/Simple/CGI.pm
+SHA1 d82eb06c79379742662cf4eefc96da8dc5eeae41 lib/HTTP/Server/Simple.pm
+SHA1 45d68d9c4b821a6376f35898aa860c1229f61d16 lib/HTTP/Server/Simple/CGI.pm
+SHA1 94094b43c94eddcdf24ca613a86ccce11874f67b lib/HTTP/Server/Simple/CGI/Environment.pm
 SHA1 db064af54cab345a71daec576e32e64b8fb1033d t/00smoke.t
 SHA1 9e68bffc26b5a42e2785ec68c3bf6fe45d6bb6da t/01live.t
 SHA1 aca95653cfce68912e08c57b3a4566207e2f99b3 t/02pod.t
@@ -38,7 +39,7 @@ SHA1 bc768072c7b03bd801a81936ef79bbe42e05f98f t/04cgi.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFC+VetEi9d9xCOQEYRApnVAJ48RyxwPVlML9Y7cMI8VegRZKDu8ACeLQx+
-/rB4JjYI87p33E7PpnYxSZk=
-=XmHA
+iD8DBQFDGGPzEi9d9xCOQEYRAo3HAJ4h9HEfWI47aCws/Im3Zi/dIL5gYwCaAqR7
+2YIKQ+CQj+HFJVbVWUZbzCU=
+=dxhv
 -----END PGP SIGNATURE-----
